# Linguagem-Python

./: Cálculo Triângulo  F-STRING - print  Jogo da Forca.py  LICENSE  README.md  resultado_teste_20251211_162328.html  resultado_teste_20251211_162328.txt  sorteio.mega.sena.1.jogo.py  test_001_model_base.txt  test_01_model_base.txt  test_02_heranca_contas.txt  test_03_operacoes.txt  test_04_transferencias.txt
.env/: pyvenv.cfg
Ambientes Virtuais/: Ambientes Virtuais.py  pipenv.py  poetry.py
Calculadora/: Calculadora_Python_2.0.py  calculadora_python.py
Calculadora_Python/: calculadora_python.incrementos.py
Classes/: Class  Class.py  Classes_parametros.py  Encapsulamento.py  Exercicio.py  Exercicio02.py  Herança Múltipla com ** kw.py  Herança de Classes Múltiplas.py  Herança de Classes Simples.py  Herança de classes.py  Métodos.py  Objetos.py  Programação Orientada a Objeto.py
Condições(if.else)/: Condição Aninhada  Conversor.Bases.Numéricas  Empréstimo.Bancário  Empréstimo.Bancário.py  Estaturas  Estruturas.Exemplos  Exercicio.Tabela.verdade  Exercicios.matematicos.diversos  Exercício.ESTATURA  IMC  Impar.Par-Exercicio  Login.Senha  Operadores.Lógicos  Problema01  Promoção.Black.Friday  (+10 more)
TDD-PROJECT/: pyproject.toml
TDD-PROJECT/store/: Makefile  __init__.py  main.py
TDD-PROJECT/store/core/: config.py  docker-compose.yml
TDD-PROJECT/store/core/schemas/: __init__.py  base.py  product.py
TDD-PROJECT/store/db/: mongo.py
TDD-PROJECT/test/schemas/: configtest.py  factories.py  product.py
TDD-PROJECT/test/schemas/usecases/: product.py  test_product.py
(+626 files in other folders)
